Added a csv download endpoint for student report data (#998)
* Added a csv download endpoint for student report data

* Forgot implementation class for streaming

* tuning csv output

* Added unit testing

* Reducing code duplication